Make hamburger fixed position on mobile.

--- a/resources/assets/styles/modules/_navbar.scss
+++ b/resources/assets/styles/modules/_navbar.scss
@@ -3,7 +3,7 @@
   width: 45px;
   height: 45px;
   background-color: $mdgreen;
-  position: absolute;
+  position: fixed;
   top: 10px;
   right: 10px;
   z-index: 999;
@@ -43,7 +43,7 @@
   }
 
   @media (max-width: $bkpoint) {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -104,7 +104,7 @@
     }
 
     .small-logo {
-      width: 110px;
+      width: 150px;
       position: absolute;
       top: 10px;
       right: 0;
